# tp-cys-2025q1

./: .gitignore  CMakeLists.txt  Makefile  README.md  bmp.c  bmp.h  file_utils.c  file_utils.h  lsb_decoder.c  lsb_decoder.h  lsb_encoder.c  lsb_encoder.h  main.c  permutation_table.c  permutation_table.h  sss.c  sss.h  sss_algos.c  sss_algos.h  sss_helpers.c  sss_helpers.h
include/: bmp.h  permutation_table.h  sss.h
src/: bmp.c  file_utils.c  lsb_decoder.c  lsb_encoder.c  main.c  permutation_table.c  sss.c  sss_algos.c  sss_helpers.c
